# django-base

./: .gitignore  CHANGELOG.md  README.md  create_configs.sh  deploy.sh  init_env.sh  post_deploy.sh  pyproject.toml  release.sh  setup_configs.sh  setup_deploy.sh  setup_ssl.sh  uninstall_app.sh  uninstall_cert.sh  uninstall_pg.sh  vps_setup.sh
account/migrations/: 0001_initial.py
core/: apps.py  urls.py  views.py
core/management/commands/: init_site.py
docs/: bootstrap-layout-guide.md  bootstrap-template-guide.md
project/: settings.py  urls.py
static/css/: main.css
templates/: base.html  index.html
templates/account/: email.html  logout.html  password_change.html
templates/account/email/: account_already_exists_message.html  base_message.html  base_notification.html  email_changed_message.html  email_confirmation_message.html  email_deleted_message.html  password_changed_message.html  password_reset_key_message.html
templates/allauth/elements/: alert.html  h1__entrance.html  h1__manage.html  h2__manage.html
templates/allauth/layouts/: base.html  entrance.html  manage.html
templates/core/: index.html  privacy_policy.html  terms_conditions.html
templates/includes/: sidebar.html
templates/socialaccount/: connections.html
templates/users/: profile.html
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_customuser_data_consent_date.py  0003_customuser_display_name.py  0004_alter_customuser_display_name.py
