[project]
name = "django-base"
version = "0.7.0"
description = "Base Django project template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.1",
    "django-allauth[socialaccount]>=65.7.0",
    "django-anymail[mailgun]>=13.0",
    "django-debug-toolbar>=5.2.0",
    "environs[django]>=14.1.1",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.6",
    "whitenoise>=6.9.0",
]